sema/testdata/gcc-c99-extra/reject/pr35742.c
void
foo ()
{
  for (;;)
    ({break;})();
  for (;;)
    ({continue;})();
}
